# tesseractory

./: .env  .gitmodules  justfile  notes.txt  testing.c
codegen/: generate.py  mathcheck.py
godot/: Main.tscn  config.tres  default.gd  default.tscn  icon.svg.import  project.godot  tesseractory.gdextension
godot/scenes/: OverlayUi.tscn  PauseUI.tscn  WorldUI.tscn  overlay_ui.gd
godot/scripts/: Holder.gd  MouseCapturer.gd  WorldUI.gd  tesser_config.gd
godot/scripts/player/: Player.gd  PlayerCamera.gd
godot/scripts/player/cameras/: AxisCamera.gd
godot/shaders/: global_uniforms.gdshaderinc  hexadecitree.gdshaderinc  math.gdshaderinc  raymarch.glsl  raymarch.glsl.import  show_world.gdshader
godot/textures/: player.png.import  temp_atlas.png.import
rust/: Cargo.toml
rust/src/: algos.rs  extensions.rs  godot_bridge.rs  lib.rs  math.rs  player.rs  type_aliases.rs  world.rs
rust/src/godot_bridge/: api.rs  math.rs  mod.rs
rust/src/math/: algos.rs  geo.rs  infrared.rs
rust/src/math/geo/: bivec4.rs  rotor4.rs
rust/src/math/hexadecitree/: iter.rs  mod.rs  reprs.rs  tests.rs  upload.rs
rust/src/world/: foxel.rs  hexadecitree.rs
rust/tests/: amanatides_woo.rs  hexadecitree.rs  math.rs  mod.rs  tree_iter.rs
