[lib]
crate-type = ["cdylib", "lib"] # add lib for testing

[package]
name = "tesseractory"
version = "0.1.0"
edition = "2021"

[dependencies]

ahash = "0.8.3"
getset = "0.1.2"
bytemuck = { version = "1.14.0", features = ["derive", "must_cast"] }
itertools = "0.11.0"
num_enum = "0.7.0"
rayon = "1.7.0"
ultraviolet = { version = "0.9.2", features = ["int"] }
bumpalo = "3.14.0"
log = "0.4.20"
env_logger = "0.10.0"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
# features = ["custom-godot"]

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
opt-level = 3
# debug = true
